--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "sort-packages": true
     },
     "autoload": {
+        "classmap": [
+            "src/MoveInterface.php"
+        ],
         "psr-4": {
             "TicTacToe\\": "src/"
         }
