Add code coverage in HTML format.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,9 @@
         <testsuite name="TicTacToe Api Module">
             <directory>./test/Api</directory>
         </testsuite>
+        <testsuite name="TicTacToe WebUi Module">
+            <directory>./test/WebUi</directory>
+        </testsuite>
     </testsuites>
 
     <filter>
